--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Forms Input Add -->
     <p class="h3 text-center m-2">Add/Update Expense</p>
     <form action="#" method="post">
-        <div class="row m-5">
+        <div class="row m-5 d-flex flex-row flex-wrap">
           <div class="col">
             <input type="text" class="form-control" placeholder="Enter Expense Name" id="expense_name">
           </div>
